2008-01-25  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.glade
		- Fix some adjustments so the default value is valid

	* src/connection-editor/nm-connection-editor.c
		- (add_wired_page, add_wireless_page): handle showing the default value
			the correct way, using the 'output' signal rather than the asstastic
			hack that was there before

2008-01-25  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-leap.c
	  src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-simple.c
	  src/wireless-security/eap-method-tls.c
	  src/wireless-security/eap-method-ttls.c
	  src/wireless-security/eap-method.c
	  src/wireless-security/wireless-security.c
	  src/wireless-security/ws-dynamic-wep.c
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-passphrase.c
	  src/wireless-security/ws-wpa-eap.c
	  src/wireless-security/ws-wpa-psk.c
		- Fix leaks; be sure to sink the notebook widgets obtained from Glade,
			then don't ref them again when passing them to the generic class
			init functions.  Make the generic class's unref handler clean up
			the generic class's data instead of the children having to do it.
			(rh #430178)

2008-01-25  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (add_device_to_model): fix leak of device name
		- (dialog_init): unconditionalize some code for GTK+ >= 2.6

2008-01-25  Dan Williams  <dcbw@redhat.com>

	* src/main.c
		- (main, setup_signals, signal_handler): trap SIGTERM and SIGINT and
			exit cleanly

2008-01-24  Dan Williams  <dcbw@redhat.com>

	Fix gnome.org #505899

	* src/applet.c
	  src/applet.h
		- (applet_find_active_connection_for_device): make public

	* src/applet-dialogs.c
		- (info_dialog_get_label): remove; use glade_xml_get_widget() instead
		- (set_eap_info_label): handle label creation for 802.1x and WPA
			Enterprise connections